# Student-Management-System-

./: README.md
student_managment_system/: CMakeLists.txt  Course.cpp  Course.h  CourseList.cpp  CourseList.h  GeneralProgramStudent.cpp  GeneralProgramStudent.h  NormalCourse.cpp  NormalCourse.h  Rational.cpp  Rational.h  SpecialProgramStudent.cpp  SpecialProgramStudent.h  Student.cpp  Student.h  SummerCourse.cpp  SummerCourse.h  main.cpp
